fixes travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: ruby
-	rvm:
-	  - 2.2.2
-	  - 2.2.1
-	  - 2.1.5
-	cache: bundler
-	script: bundle exec rspec
-	addons:
-	  postgresql: "9.3"
-	before_script:
-	  - psql -c 'create database bitlist_db;' -U postgres
+rvm:
+  - 2.1.5
+  - 2.2.1
+cache: bundler
+script: bundle exec rspec
+addons:
+  postgresql: "9.3"
+before_script:
+  - psql -c 'create database  qwickbit_test;' -U postgres
+
+services:
+  - redis-server
